chore: add package lodash

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.45.0",
     "eslint-config-next": "^14.0.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.268.0",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
@@ -40,6 +41,7 @@
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@prisma/client": "^5.7.1",
+    "@types/lodash": "^4.14.202",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
