--- a/prisma/project.json
+++ b/prisma/project.json
@@ -7,7 +7,7 @@
     "category": "Personal Challenge",
     "description": "A personal website that explains how I love the world of frontend developer",
     "stacks": [
-      "Typescript",
+      "TypeScript",
       "Next.js",
       "React.js",
       "TailwindCSS",
@@ -36,7 +36,7 @@
     "title": "Matamata Politik Dashboard",
     "category": "Internal Project",
     "description": "This project was created to manage the news on the matamatapolitik.com website",
-    "stacks": ["Typescript", "Next.js", "React.js", "MaterialUI", "GRPC"],
+    "stacks": ["TypeScript", "Next.js", "React.js", "MaterialUI", "GRPC"],
     "github": "",
     "website": "https://www.matamatapolitik.com",
     "createAt": "2024-01-04T00:00:00.000Z"
@@ -68,7 +68,7 @@
     "title": "Sugoku Mobile App",
     "category": "Personal Challenge",
     "description": "Sugoku Mobile App is An interactive mobile game to play sudoku with 3 level difficulties",
-    "stacks": ["Javascript", "Expo", "ReactNative"],
+    "stacks": ["JavaScript", "Expo", "ReactNative"],
     "github": "https://github.com/ihsnmuh/sugoku",
     "website": "https://expo.dev/@ihsnmuh/sugoku-ihsan",
     "createAt": "2024-01-02T00:00:00.000Z"
@@ -147,7 +147,7 @@
     "title": "Nonton Movies",
     "category": "Personal Challenge",
     "description": "Movie Web is a website to search popular Movie and Tv Series",
-    "stacks": ["Javascript", "Firebase", "React.js", "Bootstrap"],
+    "stacks": ["JavaScript", "Firebase", "React.js", "Bootstrap"],
     "github": "",
     "website": "https://nonton-moviesme.web.app/",
     "createAt": "2023-12-29T00:00:00.000Z"
