--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.45.0",
     "eslint-config-next": "^14.0.4",
+    "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.268.0",
     "next": "^14.0.4",
@@ -32,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "reading-time-estimator": "^1.11.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
