--- a/package.json
+++ b/package.json
@@ -16,12 +16,10 @@
   "dependencies": {
     "@tanstack/react-query": "^4.35.0",
     "@tanstack/react-query-devtools": "^4.35.0",
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^3.6.0",
     "eslint": "8.45.0",
     "eslint-config-next": "^14.0.4",
     "gray-matter": "^4.0.3",
@@ -34,6 +32,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "reading-time-estimator": "^1.11.0",
+    "rehype-pretty-code": "^0.13.2",
+    "shiki": "^1.6.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
@@ -44,14 +44,22 @@
     "@commitlint/config-conventional": "^17.7.0",
     "@prisma/client": "^5.7.1",
     "@types/lodash": "^4.14.202",
+    "@types/node": "20.4.2",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
+    "next-mdx-remote": "^5.0.0",
     "prettier": "^3.1.0",
-    "prisma": "^5.7.1"
+    "prisma": "^5.7.1",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-code-titles": "^0.1.2",
+    "remark-gfm": "^4.0.0"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,html,css,json}": [
