--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.268.0",
+    "motion": "^11.11.17",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.26",
