--- a/prisma/project.json
+++ b/prisma/project.json
@@ -1,9 +1,22 @@
 [
   {
-    "id": "d45bdb27-c12c-4f40-b29f-ad0b25e9f952",
+    "id": "59666387-2d17-49a8-b107-f5870e6768f6",
+    "image": "personal-website-v2",
+    "title": "Personal Website V2",
+    "slug": "personal-website-v2",
+    "category": "Personal Challenge",
+    "description": "Personal Project build with love",
+    "stacks": ["Next.js", "TypeScript", "TailwindCSS", "ReactQuery"],
+    "github": "https://github.com/ihsnmuh/ihsanmuh",
+    "website": "https://ihsanmuh.com",
+    "createAt": "2024-12-03T13:56:23.224Z",
+    "updateAt": "2024-12-03T14:01:58.914Z"
+  },
+  {
+    "id": "6bb72941-e67e-4da1-966b-992823a49a02",
     "image": "personal-website",
-    "slug": "personal-website",
     "title": "Personal Website V1",
+    "slug": "personal-website",
     "category": "Personal Challenge",
     "description": "A personal website that explains how I love the world of frontend developer",
     "stacks": [
@@ -15,37 +28,40 @@
     ],
     "github": "https://github.com/ihsnmuh/story-ihsan",
     "website": "https://story-ihsan-ihsnmuh.vercel.app/",
-    "createAt": "2024-01-06T00:00:00.000Z"
+    "createAt": "2024-01-06T00:00:00.000Z",
+    "updateAt": "2024-04-05T03:32:39.230Z"
   },
   {
-    "id": "07d8a3a7-1258-4f7e-bef3-4738a30d6a21",
+    "id": "e33b1553-8da1-4f73-9cc7-36f0f577450b",
     "image": "krealogi-case",
-    "slug": "krealogi-case",
     "title": "Krealogi: UI/UX Challenge",
+    "slug": "krealogi-case",
     "category": "UX/UI Challenge",
     "description": "This project describes the features of marketplace and logistics integration.",
     "stacks": ["Figma", "UI/UX"],
     "github": "",
     "website": "https://ihsnmuh.medium.com/integrasi-logistik-expedisi-marketplace-pada-aplikasi-krealogi-ux-case-study-b52f5f9b4563",
-    "createAt": "2024-01-05T00:00:00.000Z"
+    "createAt": "2024-01-05T00:00:00.000Z",
+    "updateAt": "2024-04-05T03:06:16.209Z"
   },
   {
-    "id": "717bd90e-5a1c-4efc-95c6-076217d51ddc",
+    "id": "6bb9ebea-217b-439d-a388-0e69538b73a8",
     "image": "dashboard-mmp",
-    "slug": "dashboard-mmp",
     "title": "Matamata Politik Dashboard",
+    "slug": "dashboard-mmp",
     "category": "Internal Project",
     "description": "This project was created to manage the news on the matamatapolitik.com website",
     "stacks": ["TypeScript", "Next.js", "React.js", "MaterialUI", "GRPC"],
     "github": "",
     "website": "https://www.matamatapolitik.com",
-    "createAt": "2024-01-04T00:00:00.000Z"
+    "createAt": "2024-01-04T00:00:00.000Z",
+    "updateAt": "2024-04-05T03:32:39.230Z"
   },
   {
-    "id": "20cff61b-a108-4ab6-a07b-d151b72dbd01",
+    "id": "d18b81dc-06bb-4d9c-8e75-f55962e582e2",
     "image": "qurantara",
-    "slug": "qurantara",
     "title": "Qurantara",
+    "slug": "qurantara",
     "category": "Personal Challenge",
     "description": "This website functions as a medium for reading and listening to the Quran, reading hadith, and also viewing prayer schedules based on regions",
     "stacks": [
@@ -59,25 +75,27 @@
     ],
     "github": "https://github.com/ihsnmuh/qurantara-client",
     "website": "https://qurantara-30c57.web.app/",
-    "createAt": "2024-01-03T00:00:00.000Z"
+    "createAt": "2024-01-03T00:00:00.000Z",
+    "updateAt": "2024-04-05T03:06:16.210Z"
   },
   {
-    "id": "d630624f-c182-460f-8cb2-dd0f582135d4",
+    "id": "d9170854-d31f-4de2-8d38-ac8e9b8dd32a",
     "image": "sugoku",
-    "slug": "sugoku",
     "title": "Sugoku Mobile App",
+    "slug": "sugoku",
     "category": "Personal Challenge",
     "description": "Sugoku Mobile App is An interactive mobile game to play sudoku with 3 level difficulties",
     "stacks": ["JavaScript", "Expo", "ReactNative"],
     "github": "https://github.com/ihsnmuh/sugoku",
     "website": "https://expo.dev/@ihsnmuh/sugoku-ihsan",
-    "createAt": "2024-01-02T00:00:00.000Z"
+    "createAt": "2024-01-02T00:00:00.000Z",
+    "updateAt": "2024-04-05T03:39:36.102Z"
   },
   {
-    "id": "63592dee-b132-42fb-a567-77b7793f93fb",
+    "id": "aea5c0c6-4770-44ae-8e54-176592062bba",
     "image": "ecommerce-wannabe",
-    "slug": "ecommerce-wannabe",
     "title": "E-Commerce Wannabe",
+    "slug": "ecommerce-wannabe",
     "category": "Personal Challenge",
     "description": "Like Web e-commerce in general, you can order some gadget and add to the cart, but this is very simple",
     "stacks": [
@@ -92,13 +110,14 @@
     ],
     "github": "https://github.com/ihsnmuh/ecommerce-cms-client",
     "website": "https://ecommerce-client-mu.web.app/",
-    "createAt": "2024-01-01T00:00:00.000Z"
+    "createAt": "2024-01-01T00:00:00.000Z",
+    "updateAt": "2024-04-05T03:06:16.210Z"
   },
   {
-    "id": "2df45cdd-7173-46ad-96be-c40c092616c8",
+    "id": "8b94dc94-a9d2-4af7-b32a-2a087d959819",
     "image": "kanban-mu",
-    "slug": "kanban-mu",
     "title": "Kanban Mu",
+    "slug": "kanban-mu",
     "category": "Personal Challenge",
     "description": "Kanban mu is an application to managing tasks with many users",
     "stacks": [
@@ -115,13 +134,14 @@
     ],
     "github": "https://github.com/ihsnmuh/kanban-client",
     "website": "https://kanban-mu.web.app/",
-    "createAt": "2023-12-30T00:00:00.000Z"
+    "createAt": "2023-12-30T00:00:00.000Z",
+    "updateAt": "2024-04-05T03:06:16.209Z"
   },
   {
-    "id": "518a6ac9-30af-4f3a-8fa1-1a740ac80f2e",
+    "id": "e17635b6-73d6-49f4-a54b-d09712775c3c",
     "image": "fancy-todo",
-    "slug": "fancy-todo",
     "title": "Fancy Todo",
+    "slug": "fancy-todo",
     "category": "Personal Challenge",
     "description": "Fancy Todo is an application for managing your to-do list with other users.",
     "stacks": [
@@ -138,25 +158,27 @@
     ],
     "github": "https://github.com/ihsnmuh/fancy-todo-client",
     "website": "https://fancy-todosmu.web.app/",
-    "createAt": "2023-12-29T00:00:00.000Z"
+    "createAt": "2023-12-29T00:00:00.000Z",
+    "updateAt": "2024-04-05T03:06:16.209Z"
   },
   {
-    "id": "fab2e395-2d25-40f3-bba6-f064bf0741dd",
+    "id": "cf2069cd-c37d-4eff-99b0-4dc7af60edd3",
     "image": "nonton-movies",
-    "slug": "nonton-movies",
     "title": "Nonton Movies",
+    "slug": "nonton-movies",
     "category": "Personal Challenge",
     "description": "Movie Web is a website to search popular Movie and Tv Series",
     "stacks": ["JavaScript", "Firebase", "React.js", "Bootstrap"],
     "github": "",
     "website": "https://nonton-moviesme.web.app/",
-    "createAt": "2023-12-29T00:00:00.000Z"
+    "createAt": "2023-12-29T00:00:00.000Z",
+    "updateAt": "2024-04-05T03:39:36.102Z"
   },
   {
-    "id": "2132b649-773b-485f-8985-88bf606cba9d",
+    "id": "4d500d8d-32d3-438c-b3a8-edc0d11f30fa",
     "image": "entertain-me",
-    "slug": "entertain-me",
     "title": "Entertain Me",
+    "slug": "entertain-me",
     "category": "Personal Challenge",
     "description": "EntertainMe is a mobile app for managing data movie and series",
     "stacks": [
@@ -172,6 +194,7 @@
     ],
     "github": "https://github.com/ihsnmuh/entertainme",
     "website": "https://expo.dev/@ihsnmuh/entertaime-ihsan",
-    "createAt": "2023-12-28T00:00:00.000Z"
+    "createAt": "2023-12-28T00:00:00.000Z",
+    "updateAt": "2024-04-05T03:06:16.210Z"
   }
 ]
