--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.268.0",
     "motion": "^11.11.17",
     "next": "^14.0.4",
+    "next-nprogress-bar": "^2.3.15",
     "next-themes": "^0.2.1",
     "postcss": "8.4.26",
     "react": "^18.2.0",
