--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^4.12.0",
     "reading-time-estimator": "^1.11.0",
     "rehype-pretty-code": "^0.13.2",
+    "sharp": "^0.33.5",
     "shiki": "^1.6.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
