--- a/.github/workflows/prod-cd.yml
+++ b/.github/workflows/prod-cd.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CD
+name: Deploy App 🚀
 
 on:
   push:
@@ -13,10 +13,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '18.x'
 
@@ -28,14 +28,21 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           port: 22
           script: |
+            echo "Starting deployment process..."
             whoami
             pwd
             cd /var/www/fe-app/ihsanmuh/
+            echo "Fetching latest code from master branch..."
             git fetch
             git checkout master
-            git pull origin master
-            fnm use 18
+            git pull origin master --rebase
+            echo "Setting up Node.js environment..."
+            fnm use 18 || source ~/.bashrc
             node -v
-            yarn
+            echo "Installing dependencies..."
+            yarn install --frozen-lockfile
+            echo "Building application..."
             yarn build
+            echo "Restarting application using PM2..."
             pm2 restart ihsanmuh-prod
+            echo "Deployment completed successfully."
