--- a/.github/workflows/prod-cd.yml
+++ b/.github/workflows/prod-cd.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Deploy App 🚀
 
 on:
@@ -29,21 +26,37 @@ jobs:
           port: 22
           script: |
             echo "Starting deployment process..."
+
+            # Debug who is running and the current directory
             whoami
             pwd
-            cd /var/www/fe-app/ihsanmuh/
+
+            # Navigate to the application directory
+            cd /var/www/fe-app/ihsanmuh/ || (echo "Directory not found!" && exit 1)
+
+            # Fetch and update the latest code from GitHub
             echo "Fetching latest code from master branch..."
-            git fetch
-            git checkout master
-            git pull origin master
+            git fetch --all
+            git reset --hard origin/master
+            git checkout master || (echo "Failed to checkout master!" && exit 1)
+            git pull origin master || (echo "Git pull failed!" && exit 1)
+
+            # Load Node.js environment
             echo "Setting up Node.js environment..."
-            source ~/.bashrc
-            fnm use 18
-            node -v
+            source ~/.bashrc || echo "Failed to source .bashrc. Ensure this file exists and is properly configured."
+            fnm use 18 || (echo "fnm command failed. Ensure fnm is installed." && exit 1)
+            node -v || (echo "Node.js is not available. Ensure it is installed." && exit 1)
+
+            # Install dependencies
             echo "Installing dependencies..."
-            yarn
+            yarn install --frozen-lockfile || (echo "Failed to install dependencies using yarn!" && exit 1)
+
+            # Build the application
             echo "Building application..."
-            yarn build
+            yarn build || (echo "Application build failed!" && exit 1)
+
+            # Restart the application
             echo "Restarting application using PM2..."
-            pm2 restart ihsanmuh-prod
+            pm2 restart ihsanmuh-prod || (echo "Failed to restart application using PM2!" && exit 1)
+
             echo "Deployment completed successfully."
