chore: update cicd again

--- a/.github/workflows/prod-cd.yml
+++ b/.github/workflows/prod-cd.yml
@@ -43,6 +43,7 @@ jobs:
 
             # Load Node.js environment
             echo "Setting up Node.js environment..."
+            source ~/.profile
             source ~/.bashrc || echo "Failed to source .bashrc. Ensure this file exists and is properly configured."
             fnm use 18 || (echo "fnm command failed. Ensure fnm is installed." && exit 1)
             node -v || (echo "Node.js is not available. Ensure it is installed." && exit 1)
