--- a/.github/workflows/prod-cd.yml
+++ b/.github/workflows/prod-cd.yml
@@ -50,6 +50,7 @@ jobs:
 
             # Install dependencies
             echo "Installing dependencies..."
+            export PATH=$HOME/.yarn/bin:$PATH
             yarn install --frozen-lockfile || (echo "Failed to install dependencies using yarn!" && exit 1)
 
             # Build the application
