--- a/.github/workflows/prod-cd.yml
+++ b/.github/workflows/prod-cd.yml
@@ -50,8 +50,7 @@ jobs:
 
             # Install dependencies
             echo "Installing dependencies..."
-            export PATH=$PATH:/usr/local/bin:/home/username/.yarn/bin
-            yarn install --frozen-lockfile || (echo "Failed to install dependencies using yarn!" && exit 1)
+            yarn || (echo "Failed to install dependencies using yarn!" && exit 1)
 
             # Build the application
             echo "Building application..."
