--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-lite-youtube-embed": "^2.4.0",
     "reading-time-estimator": "^1.11.0",
     "rehype-pretty-code": "^0.13.2",
     "sharp": "^0.33.5",
