--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,10 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 NEXT_PUBLIC_ROOT=
 NEXT_PUBLIC_URL=
+
+NEXT_PUBLIC_UMAMI_DOMAIN=
+NEXT_PUBLIC_UMAMI_ID=
+
+NEXT_PUBLIC_CV_LINK=
 
 NEXT_PUBLIC_API=
 NEXT_PUBLIC_API_PROJECT=
