--- a/.github/workflows/prod-ci.yml
+++ b/.github/workflows/prod-ci.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Enable corepack for Yarn
+        run: corepack enable
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
@@ -38,7 +41,10 @@ jobs:
 
       - name: Write .env file from secret
         run: |
-          echo "${{ secrets.ENV_CONTENT }}" > .env
+          printf "%s" "${{ secrets.ENV_CONTENT }}" > .env
+
+      - name: Show cache usage
+        run: echo "Docker cache used via GitHub Actions Cache"
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
