feat: add TypeScript typecheck script and enhance CI workflow; improve Tailwind animations and accessibility features

--- a/.github/workflows/prod-ci.yml
+++ b/.github/workflows/prod-ci.yml
@@ -20,4 +20,7 @@ jobs:
       - run: |
           yarn
           echo "${{ secrets.ENV_PROD }}" > .env
+          yarn format:check
+          yarn lint
+          yarn typecheck
           yarn build
