--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint src --fix && yarn format",
@@ -27,12 +27,12 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "motion": "^11.11.17",
-    "next": "^14.0.4",
+    "next": "^16.1.6",
     "next-nprogress-bar": "^2.3.15",
     "next-themes": "^0.2.1",
     "postcss": "8.4.26",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-icons": "^4.12.0",
     "react-lite-youtube-embed": "^2.4.0",
     "reading-time-estimator": "^1.11.0",
@@ -42,7 +42,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6"
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.7.1",
@@ -59,6 +59,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
     "next-mdx-remote": "^5.0.0",
+    "next-sitemap": "^4.2.3",
     "prettier": "^3.1.0",
     "prisma": "^5.7.1",
     "rehype-autolink-headings": "^7.1.0",
