feat: implement RSS feed generation and enhance SEO with structured data; add custom error handling and improve site navigation

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next-sitemap",
+    "build": "next build && node scripts/generate-rss.mjs && next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint src --fix && yarn format",
@@ -37,6 +37,7 @@
     "react-lite-youtube-embed": "^2.4.0",
     "reading-time-estimator": "^1.11.0",
     "rehype-pretty-code": "^0.13.2",
+    "rss": "^1.2.2",
     "sharp": "^0.33.5",
     "shiki": "^1.6.4",
     "tailwind-merge": "^1.14.0",
@@ -52,6 +53,7 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/rss": "^0.0.32",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
