--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "format": "prettier -w .",
     "format:check": "prettier -c .",
     "typecheck": "tsc -p tsconfig.json --noEmit",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
     "generate": "prisma generate",
     "prepare": "husky install"
   },
@@ -49,16 +52,22 @@
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@prisma/client": "^5.7.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/lodash": "^4.14.202",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@types/rss": "^0.0.32",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@vitejs/plugin-react": "^5.1.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.0",
+    "jsdom": "^28.0.0",
     "lint-staged": "^14.0.1",
     "next-mdx-remote": "^5.0.0",
     "next-sitemap": "^4.2.3",
@@ -67,7 +76,8 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-code-titles": "^0.1.2",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "vitest": "^4.0.18"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,html,css,json}": [
