--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "rehype-slug": "^6.0.0",
     "remark-code-titles": "^0.1.2",
     "remark-gfm": "^4.0.0",
+    "vite": "^7.3.1",
     "vitest": "^4.0.18"
   },
   "lint-staged": {
