chore: update yarn install command in CI workflow to allow dependency updates

--- a/.github/workflows/prod-ci.yml
+++ b/.github/workflows/prod-ci.yml
@@ -38,7 +38,7 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install
 
       - name: Create .env file
         run: echo "${{ secrets.ENV_PROD }}" > .env
