--- a/.github/workflows/prod-cd.yml
+++ b/.github/workflows/prod-cd.yml
@@ -57,9 +57,12 @@ jobs:
             source ~/.nvm/nvm.sh
             nvm use 22 || (echo "❌ nvm command failed. Ensure nvm is installed." && exit 1)
 
+            # Enable corepack for Yarn Berry
+            corepack enable
+
             # Install dependencies
             echo "📦 Installing dependencies..."
-            yarn install --frozen-lockfile || (echo "❌ Failed to install dependencies using yarn!" && exit 1)
+            yarn install --immutable || (echo "❌ Failed to install dependencies using yarn!" && exit 1)
 
             # Build the application
             echo "🔨 Building application..."
