--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.6.0",
-    "eslint": "8.45.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "^14.0.4",
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
@@ -60,11 +60,12 @@
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
     "@types/lodash": "^4.14.202",
-    "@types/node": "20.4.2",
+    "@types/node": "^22.12.0",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@types/rss": "^0.0.32",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "@vitejs/plugin-react": "^5.1.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
