--- a/package.json
+++ b/package.json
@@ -17,7 +17,16 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
     "generate": "prisma generate",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "docker:dev": "docker-compose -f docker/docker-compose.yml up",
+    "docker:dev:build": "docker-compose -f docker/docker-compose.yml up --build",
+    "docker:dev:down": "docker-compose -f docker/docker-compose.yml down",
+    "docker:dev:clean": "docker-compose -f docker/docker-compose.yml down -v",
+    "docker:prod": "docker-compose -f docker/docker-compose.prod.yml up",
+    "docker:prod:build": "docker-compose -f docker/docker-compose.prod.yml up --build",
+    "docker:prod:down": "docker-compose -f docker/docker-compose.prod.yml down",
+    "docker:build": "docker build -f docker/Dockerfile -t ihsanmuh:latest .",
+    "docker:run": "docker run -p 3000:3000 ihsanmuh:latest"
   },
   "dependencies": {
     "@tanstack/react-query": "^4.35.0",
