--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -61,6 +61,10 @@ COPY --from=builder /app/.next/static ./.next/static
 COPY --from=builder /app/prisma ./prisma
 COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
 
+# Copy Prisma CLI for running migrations on deployment
+COPY --from=builder /app/node_modules/prisma ./node_modules/prisma
+COPY --from=builder /app/node_modules/@prisma/engines ./node_modules/@prisma/engines
+
 USER nextjs
 
 EXPOSE 3000
