feat(docker): enhance local development setup with new Docker commands and configuration
- Added new Docker commands to `package.json` for easier management of local development.
- Introduced `docker-compose.local.yml` for streamlined local PostgreSQL setup and application deployment.
- Updated `.dockerignore` to retain `.env` for necessary environment variables during build.
- Removed obsolete `.env.example` file to clean up the project structure.

--- a/docker/.dockerignore
+++ b/docker/.dockerignore
@@ -29,10 +29,10 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# Environment
-.env
+# Environment (keep .env for NEXT_PUBLIC_* vars needed at build time)
 .env*.local
 .env.development
+.env.production
 .env.test
 
 # Vercel
