refactor: streamline Docker configuration and CI/CD workflow
- Removed the conditional renaming of the Docker Compose file in the production deployment workflow to simplify the process.
- Introduced a new `docker-compose.server-full.yml` file for comprehensive Docker setup, including PostgreSQL service configuration.
- Added a cache directory creation step in the Dockerfile for Next.js image optimization.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -65,6 +65,9 @@ COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
 COPY --from=builder /app/node_modules/prisma ./node_modules/prisma
 COPY --from=builder /app/node_modules/@prisma/engines ./node_modules/@prisma/engines
 
+# Create cache directory for Next.js image optimization
+RUN mkdir -p .next/cache && chown -R nextjs:nodejs .next/cache
+
 USER nextjs
 
 EXPOSE 3000
