chore: add .dockerignore and enhance CI/CD workflow for cache management
- Introduced a new `.dockerignore` file to exclude unnecessary files and directories from the Docker build context, improving build efficiency.
- Updated the production CI/CD workflow to generate an environment hash for cache busting, ensuring that Docker images are rebuilt when environment variables change.

--- a/.github/workflows/prod-ci.yml
+++ b/.github/workflows/prod-ci.yml
@@ -81,6 +81,10 @@ jobs:
             type=sha,prefix=
             type=raw,value=latest
 
+      - name: Generate env hash for cache busting
+        id: env-hash
+        run: echo "hash=$(echo "${{ secrets.ENV_PROD }}" | sha256sum | cut -d' ' -f1)" >> $GITHUB_OUTPUT
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
@@ -91,6 +95,8 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: |
+            CACHE_BUST=${{ steps.env-hash.outputs.hash }}
 
       - name: Check image size
         run: |
