feat: add Radix UI tooltip component and update project stack references
- Introduced a new Tooltip component using Radix UI for enhanced user interaction.
- Updated stack references in various components and project data to correct the spelling of "PostgreSQL".
- Enhanced StackPills component to display tooltips for stack names.
- Improved ProjectCard component to show hidden stacks with a tooltip for better visibility.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "docker:logs": "docker compose -f docker/docker-compose.local.yml logs -f app"
   },
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^4.35.0",
     "@tanstack/react-query-devtools": "^4.35.0",
     "autoprefixer": "10.4.14",
